# SrEngine

./: .gitignore  CMakeLists.txt  README.md  SrEngine.cpp  SrEngine.h
Libraries/includes/assimp_dll/: assimp-vc140-mt.exp
Libraries/includes/glad/: glad.h
Libraries/libs/: glfw3.lib  tinyxml2.lib
Resource/Scene/: scene.o3d  scenePbr.o3d
Resource/Shaders/: RenderShadowF.shader  RenderShadowV.shader  ShadowF.shader  ShadowV.shader
Source/: CMakeLists.txt
Source/Sr_Core/: App.cpp  CMakeLists.txt
Source/Sr_Core/ECS/: Components.h  Systems.h
Source/Sr_Core/ECS/Base/: BaseComponent.h  BaseSystem.h  CompList.h  ComponentFactory.h  Entity.h  EntityManager.h  Types.h
Source/Sr_Core/ECS/Components/: Camera.h  DirectionalLight.h  EntityName.h  Gizmo3D.h  KeyMotion.h  MeshRenderer.h  ModelRenderer.h  Particle.h  PointLight.h  RigidBody.h  SpotLight.h  SpriteRenderer.h  Transform.h
Source/Sr_Core/ECS/Systems/: CameraSystem.h  DirectionalLightSystem.h  EditorCameraSystem.h  GridRendererSystem.h  MeshRendererSystem.h  ModelRendererSystem.h  ParticleSystem.h  PhysicsSystem.h  PointLightSystem.h  SkyBoxRendererSystem.h  SpotLightSystem.h  SpriteRendererSystem.h
Source/Sr_Core/Editor/: UiLayer.cpp  UiLayer.h
Source/Sr_Core/Editor/CompUIs/: CompUI.h  DirectLightUI.h  MeshUI.h  NameTagUI.h  PointLightUI.h  RigidbodyUI.h  TransformUI.h
Source/Sr_Core/Editor/Controls/: Widgets.h
Source/Sr_Core/Engine/: Engine.cpp  Engine.h  PathHelper.cpp  PathHelper.h
Source/Sr_Core/Errors/: Errors.h
Source/Sr_Core/Events/: AppEvents.h  Dispatcher.h  Event.h  EventSystem.h  GLFWImp.cpp  GLFWImp.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Source/Sr_Core/Objects/: ColorBuffer.h  DepthBuffer.h  GLMesh.h  GLQuad.h  Material.h  Model.h  SamplerBuffer.h  Shader.h  ShadowMap.h  Vertex.h  VertexArray.h
Source/Sr_Core/Pch/: pch.h
Source/Sr_Core/Resource/: Resource.cpp  Resource.h
Source/Sr_Core/Serializer/: XMLSerializer.cpp  XMLSerializer.h
Source/Sr_Core/Timer/: Timer.cpp  Timer.h
SrEngine/: CMakeCache.txt  cmake_install.cmake
SrEngine/Source/: cmake_install.cmake
SrEngine/Source/Sr_Core/: cmake_install.cmake
SrEngine/Source/Sr_Core/Sr_Core.dir/Debug/: Sr_Core.exe.recipe  Sr_Core.ilk
SrEngine/Source/Sr_Core/Sr_Core.dir/Debug/Sr_Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SrEngine/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
SrEngine/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
SrEngine/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
SrEngine/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
